Correct play button when no camera on iOS Safari

--- a/base.css
+++ b/base.css
@@ -77,7 +77,7 @@ button:disabled {
 }
 
 #camera {
-  display: block;
+  display: none;
 
   width: 100%;
   height: 100%;
